# CDC

./: .travis.yml  CMakeLists.txt  CMakeLists.txt~  README.md  README.md~  helloWorld.c  script.travis.yml  sonar-project.properties
Scripts_Travis/: build.sh  certificate.sh  package.sh  permissions.sh  prepare.sh  tests.sh
config/: CMakeLists.txt  CMakeLists.txt~  message.cmake~  sistema.c  sistema.cmake  sistema.cmake~  sistema.c~  sistema.h  sistema.h.in  sistema.h.in~  sistema.h~
doc/: hello.txt
lib/: README.MD  libabb.so.1  libabb.so.1.2  libcmocka.so.0.4.0
modules/: CodeCoverage.cmake
pack/: main
src/: CMakeLists.txt  CMakeLists.txt~  abb.c~  main.c~  message.cmake  message.cmake~
src/CMake - Install - Use/: CMakeLists.txt  main.c  perceptron.c  perceptron.h
src/CMake - Install - Use/example/: CMakeLists.txt
src/config/: CMakeLists.txt  sistema.h  sistema.h.in
src/install/: CMakeLists.txt  README.md  main.c  perceptron.c  perceptron.h
src/install/docs/: README.md  perceptron.h
src/install/example/: CMakeLists.txt
src/tests/: CMakeLists.txt  CodeCoverage.cmake  tests.h
tests/: CMakeLists.txt  cmockatest.c  main.c  tests.h
